# W210-Capstone-New

./: .gitignore  .python-version  README.md  W210 Recommender-systems - Content based + User Based Collaborative Filtering.ipynb  authorized_keys  pyproject.toml
.github/workflows/: lint.yml
data/: Makefile  Recommender Systems - Estimation of Content based 20210204.ipynb  Recommender_fns.ipynb  blam_yelp_eda.ipynb  content_based_example_run.ipynb  dataImporterTesting.ipynb  data_cleaning_non_food.ipynb  investigatingYelpData.ipynb  short_dataset_making.ipynb  testPreprocessing.ipynb  topic_model.ipynb
data/.ipynb_checkpoints/: Recommender Systems - Estimation of Content based 20210204-checkpoint.ipynb  blam_yelp_eda-checkpoint.ipynb  investigatingYelpData-checkpoint.ipynb  short_dataset_making-checkpoint.ipynb
data/modules/: CBR.py  dataImporter.py  recommender.py  textPreProcess.py
data/tests/: __init__.py  basic_functionality.py  context.py  test_basic_functionality.py  testfunctionality.py
data/tripAdvisor_API_attempt/: README.md  test_out.csv  tripAdvisorAPI.ipynb
trip-planner/: GetLocationPhotosFromGoogleMap.ipynb  Recommender Systems - Estimation of Content based 20210204.ipynb  W210 Recommender-systems - Content based + User Based Collaborative Filtering.ipynb  blam_yelp_eda.ipynb  content_based_example_run.ipynb  dataImporterTesting.ipynb  output.csv  short_dataset_making.ipynb  testPreprocessing.ipynb  topic_model.ipynb
trip-planner/modules/: CBR.py  __init__.py  constants.py  dataImporter.py  importModel.py  pretrainedModels.py  recommentations.py  (+2 more)
(+197 files in other folders)
