[tool.poetry]
name = "trip-planner"
version = "0.1.0"
description = ""
authors = ["Charles Carlson <c.bayardcarlson@gmail.com>", "Arrianna Daniels <arriana.daniels@ischool.berkeley.edu>", "Bruce Lam <bruce.lam@ischool.berkeley.edu>", "Shih Yang-Hsin <sam.shih@ischool.berkeley.edu>", "Young Hoon Kim <younghoonkim29@ischool.berkeley.edu>"]
readme = "README.md"
packages = [{include = "trip-planner"}]

[tool.poetry.dependencies]
python = "^3.11.2"
black = "^23.1.0"
numpy = "^1.24.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"