[tool.poetry]
name = "trip-planner"
version = "0.1.0"
description = ""
authors = ["Charles Carlson <c.bayardcarlson@gmail.com>", "Arrianna Daniels <arriana.daniels@ischool.berkeley.edu>", "Bruce Lam <bruce.lam@ischool.berkeley.edu>", "Shih Yang-Hsin <sam.shih@ischool.berkeley.edu>", "Young Hoon Kim <younghoonkim29@ischool.berkeley.edu>"]
readme = "README.md"
packages = [{include = "trip-planner"}]

[tool.poetry.dependencies]
python = "^3.11.2"
black = "^23.1.0"
numpy = "^1.24.2"
pyspark = "^3.3.2"
pandas = "^1.5.3"
nltk = "^3.8.1"
spacy = "^3.5.0"
networkx = "^3.0"
matplotlib = "^3.7.0"
spark-nlp = "^4.3.0"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
flask = "^2.2.3"
pyarrow = "^11.0.0"
py4j = "0.10.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"